Håndterer  "Anmodning om udtalelse" i overskriften

--- a/Framework/Process.xaml
+++ b/Framework/Process.xaml
@@ -6,7 +6,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1514,3232</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1514,3413</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessTransaction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="50">
@@ -118,7 +118,7 @@
       <AssemblyReference>System.Text.RegularExpressions</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Invoke major steps of the business process, which are usually implemented by multiple subworkflows.&#xA;&#xA;If a BusinessRuleException is thrown, the transaction is skipped. &#xA;If another kind of exception occurs, the current transaction can be retried. " DisplayName="Process" sap:VirtualizedContainerService.HintSize="676,3167" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Invoke major steps of the business process, which are usually implemented by multiple subworkflows.&#xA;&#xA;If a BusinessRuleException is thrown, the transaction is skipped. &#xA;If another kind of exception occurs, the current transaction can be retried. " DisplayName="Process" sap:VirtualizedContainerService.HintSize="676,3348" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="RequestVerification" />
       <Variable x:TypeArguments="x:String" Name="LogonWebSession" />
@@ -162,37 +162,24 @@
     <ui:LogMessage DisplayName="Log Message Process Start" sap:VirtualizedContainerService.HintSize="614,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Henter dokumenter tilhørende sagsnummer: &quot; + CaseNumber]" />
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="GetCaseAndDocumentInfo.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="614,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="Components\GetCaseAndDocumentInfo.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_dt_CaseAndDocumentInfo">
-          <VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="dt_CaseAndDocumentInfo" />
-        </OutArgument>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_CaseID">
-          <VisualBasicReference x:TypeArguments="x:String" ExpressionText="CaseID" />
-        </OutArgument>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_KMDAPIToken">
-          <VisualBasicReference x:TypeArguments="x:String" ExpressionText="KMDAPIToken" />
-        </OutArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_CaseNumber">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="CaseNumber" />
-        </InArgument>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_CaseTitle">
-          <VisualBasicReference x:TypeArguments="x:String" ExpressionText="CaseTitle" />
-        </OutArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_KMDNovaURL">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="KMDNovaURL" />
-        </InArgument>
-        <OutArgument x:TypeArguments="x:Boolean" x:Key="out_BFENumberBool">
-          <VisualBasicReference x:TypeArguments="x:Boolean" ExpressionText="BFENumberBool" />
-        </OutArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_dt_CaseAndDocumentInfo">[dt_CaseAndDocumentInfo]</OutArgument>
+        <OutArgument x:TypeArguments="x:String" x:Key="out_CaseID">[CaseID]</OutArgument>
+        <OutArgument x:TypeArguments="x:String" x:Key="out_KMDAPIToken">[KMDAPIToken]</OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_CaseNumber">[CaseNumber]</InArgument>
+        <OutArgument x:TypeArguments="x:String" x:Key="out_CaseTitle">[CaseTitle]</OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_KMDNovaURL">[KMDNovaURL]</InArgument>
+        <OutArgument x:TypeArguments="x:Boolean" x:Key="out_BFENumberBool">[BFENumberBool]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
-    <If Condition="[System.Text.RegularExpressions.Regex.IsMatch(CaseTitle, &quot;\bTEST\b&quot;, System.Text.RegularExpressions.RegexOptions.IgnoreCase) OrElse BFENumberBool = False]" sap:VirtualizedContainerService.HintSize="614,2406" sap2010:WorkflowViewState.IdRef="If_1">
+    <If Condition="[System.Text.RegularExpressions.Regex.IsMatch(CaseTitle, &quot;\bTEST\b&quot;, System.Text.RegularExpressions.RegexOptions.IgnoreCase) OrElse System.Text.RegularExpressions.Regex.IsMatch(CaseTitle, &quot;Anmodning om udtalelse&quot;, System.Text.RegularExpressions.RegexOptions.IgnoreCase) OrElse BFENumberBool = False]" sap:VirtualizedContainerService.HintSize="614,2587" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Then>
-        <Sequence sap:VirtualizedContainerService.HintSize="376,229" sap2010:WorkflowViewState.IdRef="Sequence_17">
+        <Sequence sap:VirtualizedContainerService.HintSize="376,410" sap2010:WorkflowViewState.IdRef="Sequence_17">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,141" sap2010:WorkflowViewState.IdRef="LogMessage_11" Message="[&quot;CaseTitel er: &quot; + CaseTitle + &quot;Og overføres derfor ikke&quot;]" />
           <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,141" sap2010:WorkflowViewState.IdRef="LogMessage_10" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;BFENumber er: &quot; + BFENumberBool.ToString]" />
         </Sequence>
       </If.Then>
